# paste-rs

./: .travis.yml  Cargo.toml  README.md
assets/: index.html  script
assets/css/: main.css
src/: controllers.rs  database.rs  note.rs  paste.rs  result.rs  settings.rs  util.rs
