[package]

name = "paste"
version = "0.0.0"
authors = [ "Nikita Pekin <contact@nikitapek.in>" ]

[[bin]]

name = "paste"

[dependencies.nickel]

git = "https://github.com/nickel-org/nickel.rs"

[dependencies.url]

git = "https://github.com/servo/rust-url"

[dependencies.redis-rs]

git = "https://github.com/mitsuhiko/redis-rs"
